welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type !=
if (litMessage(): String!=A) {
                        ^